...
        android:enabled="true"
        android:icon="@drawable/icon_tracks"
        android:title="Tracks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/albumsFragment"
        android:enabled="true"
        android:icon="@drawable/icon_albums"
        android:title="Albums"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/playlistsFragment"
        android:enabled="true"
        android:icon="@drawable/icon_playlists"
...
